# slackAI-data-bot-mvp

./: .env.example  .gitignore  README.md  SYSTEM_DESIGN.md  main.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml  init.sql
src/api/: main.py  routes.py
src/api/routes/: slack.py
src/core/: config.py  logging.py
src/schemas/: slack.py
src/services/: cache.py  llm_service.py  slack_client.py  slack_service.py
src/utils/: csv_generator.py  db.py  formatter.py  prompts.py
tests/: test_pipeline.py
